# mysql-mcp-rust

./: .gitignore  Cargo.toml  E2E_QUICK_START.md  LICENSE  PERFORMANCE.md  README.md  TEST_RESULTS.md  docker-compose.test.yml  run_e2e_tests.sh
benches/: performance_benchmark.rs
docs/: configuration.md  e2e-testing-guide.md  environment-variables.md  examples.md  main-entry-point.md  performance-optimization.md  permission-control.md  quick-reference.md  task10-list-tools-implementation.md  task14-logging-monitoring-implementation.md  task18-e2e-tests-implementation.md  task19-performance-optimization.md  task2-implementation-summary.md  task7-streaming-implementation.md  task8-execute-tool-implementation.md
src/: lib.rs  main.rs  mcp_server.rs  memory.rs
tests/: E2E_TEST_README.md  concurrent_stream_property_test.proptest-regressions  concurrent_stream_property_test.rs  config_integration_test.rs  config_property_test.rs  connection_stats_property_test.proptest-regressions  connection_stats_property_test.rs  credential_property_test.proptest-regressions  credential_property_test.rs  database_listing_property_test.rs  datasource_listing_property_test.rs  ddl_rejection_property_test.rs  dml_execution_property_test.rs  e2e_integration_test.rs  invalid_key_property_test.rs  logging_integration_test.rs  manager_property_test.rs  mcp_protocol_property_test.rs  multi_statement_property_test.rs  nonexistent_table_property_test.rs  permission_test.rs  pool_property_test.rs  query_execution_property_test.rs  query_parameter_property_test.rs  resource_content_property_test.rs  (+5 more)
(+12 files in other folders)
