[package]
name = "mysql-mcp-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "mysql_mcp_server"
path = "src/lib.rs"

[dependencies]
# MCP Protocol
rmcp = { version = "0.1", features = ["transport-io"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Security
secrecy = { version = "0.8", features = ["serde"] }

# Utilities
chrono = "0.4"
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }
futures = "0.3"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "performance_benchmark"
harness = false
